test/pass/pass30.pl2014
IMPLEMENTATION OF taylor
	PROCEDURE sin;
		VAR x: number,
		    iterations: number,
		    result: number,
		    i: number,
		    j: number,
		    sign: number,
		    flip: number,
		    exponent: number,
		    delta: number,
		    numerator: number,
		    denominator: number;
		BEGIN
			result := x;
			i := iterations;
			sign := 0 - 1;
			from := 0;
			exponent := 3;
			delta := 2;
			CALL loop
		END;
	CALL sin
.
